fix(member): remove legacy category icons behind supplied assets

--- a/apps/web-member/app/member-category-uploaded-icons.css
+++ b/apps/web-member/app/member-category-uploaded-icons.css
@@ -1,4 +1,4 @@
-/* Exact user-supplied game category icons, one independent file per menu item. */
+/* Exact user-supplied category icons. Hide every legacy icon child so only one icon renders. */
 .member-category-rail a > span {
   width: 56px !important;
   height: 56px !important;
@@ -11,31 +11,30 @@
   border-radius: 0 !important;
 }
 
-.member-category-rail a > span > svg,
-.member-category-rail a > span > img {
+.member-category-rail a > span > * {
   display: none !important;
 }
 
 .member-category-rail a:nth-of-type(1) > span {
-  background-image: url('/images/member-lobby/source-icons/category-home.svg?v=1') !important;
+  background-image: url('/images/member-lobby/source-icons/category-home.svg?v=2') !important;
 }
 .member-category-rail a:nth-of-type(2) > span {
-  background-image: url('/images/member-lobby/source-icons/category-casino.svg?v=1') !important;
+  background-image: url('/images/member-lobby/source-icons/category-casino.svg?v=2') !important;
 }
 .member-category-rail a:nth-of-type(3) > span {
-  background-image: url('/images/member-lobby/source-icons/category-slot.svg?v=1') !important;
+  background-image: url('/images/member-lobby/source-icons/category-slot.svg?v=2') !important;
 }
 .member-category-rail a:nth-of-type(4) > span {
-  background-image: url('/images/member-lobby/source-icons/category-fishing.svg?v=1') !important;
+  background-image: url('/images/member-lobby/source-icons/category-fishing.svg?v=2') !important;
 }
 .member-category-rail a:nth-of-type(5) > span {
-  background-image: url('/images/member-lobby/source-icons/category-sport.svg?v=1') !important;
+  background-image: url('/images/member-lobby/source-icons/category-sport.svg?v=2') !important;
 }
 .member-category-rail a:nth-of-type(6) > span {
-  background-image: url('/images/member-lobby/source-icons/category-card.svg?v=1') !important;
+  background-image: url('/images/member-lobby/source-icons/category-card.svg?v=2') !important;
 }
 .member-category-rail a:nth-of-type(7) > span {
-  background-image: url('/images/member-lobby/source-icons/category-lottery.svg?v=1') !important;
+  background-image: url('/images/member-lobby/source-icons/category-lottery.svg?v=2') !important;
 }
 
 @media (max-width: 520px) {
